fix(loader-overlay): align border-radius with parentElement (#DS-2734)

--- a/packages/components/loader-overlay/loader-overlay.scss
+++ b/packages/components/loader-overlay/loader-overlay.scss
@@ -25,6 +25,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+    border-radius: inherit;
 
     // todo
     z-index: 10;
